Find graph elements.

--- a/example.html
+++ b/example.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Usage example</title>
+    <script src="graphs.js"></script>
 </head>
 <body>
     <table class="graph" summary="Revenue per week">
