Styles for elements around the graph.

--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <table class="graph" summary="Revenue per week">
-        <caption>Revenue by Solution <button>Revenue Analysis</button> <span>Revenue stream $32,556</span></caption>
+        <caption>Revenue by Solution <button>Revenue Analysis</button> <span>Revenue stream <b>$32,556</b></span></caption>
         <thead><tr>
             <th></th><th>Net Comp</th><th>AnalyzerHR</th><th>Question Right</th>
         </tr></thead>
@@ -22,7 +22,7 @@
     </table>
 
     <table class="graph" summary="Installations per day">
-        <caption>Installations <button>View Installations</button> <span>Installations 136</span></caption>
+        <caption>Installations <button>View Installations</button> <span>Installations <b>136</b></span></caption>
         <thead><tr>
             <th></th><th>Net Comp</th><th>AnalyzerHR</th><th>Question Right</th>
         </tr></thead>
