Support bar type charts.

--- a/example.html
+++ b/example.html
@@ -21,7 +21,7 @@
         </tbody>
     </table>
 
-    <table class="graph" summary="Installations per day">
+    <table class="graph bar" summary="Installations per day">
         <caption>Installations <button>View Installations</button> <span>Installations <b>136</b></span></caption>
         <thead><tr>
             <th></th><th>Net Comp</th><th>AnalyzerHR</th><th>Question Right</th>
